--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -338,22 +338,175 @@ h1
   padding: 5px
   background: linear-gradient(to right, #79796b, #adad99)
   height: 650px
+  h4
+    color: black
+    font-size: 14px
+    text-align: center
+    height: 10px
+    margin-top: 3px
+    padding-top: 0px
+    margin-bottom: 6px
+    padding-bottom: 0px
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white
   
 #mechDetails
+  margin-left: 1px
+  width: 152px
+  height: 201px
+  text-align: center
+
+.mechFormHeaders
+  display: inline-block
+  font-family: Verdana, Geneva, Arial, sans-serif
+  width: 154px
+  color: black
+  font-size: 14px
+  text-align: center
+  height: 10px
+  margin-top: 3px
+  padding-top: 0px
+  margin-bottom: 3px
+  padding-bottom: 0px
+  text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white
+
+.mechModelInputHeader
+  display: inline-block
+  width: 146px
+  text-align: center
+
+.mechDataInputBox
+  font-size: 12px
+  color: black
+  height: 12px
+  margin-top: 0px
+  margin-left: 1px
+  width: 146px
+
+#mechHeaderLeftCol
   display: inline-block
   vertical-align: top
-  left: 15%
-  top: 70px
-  width: 300px
-  height: 79%
+  width: 153px
+  height: 138px
+  font-family: Verdana, Geneva, Arial, sans-serif
+  font-size: 10px
   color: white
-  h2
-    margin-bottom: 5px
-    margin-top: 5px
-  
-#mechDetails_Name
+
+.detailsTextDisplay
   display: inline-block
-  width: 100px
+  vertical-align: top
+  width: 150px
+  height: 33px
+  background-color: #3e4146
+  border: 2px solid black
+  margin-top: 5px
+
+.detailsTextDisplay p
+  vertical-align: top
+  margin-top: 1px
+
+#mechDetails1
+  height: 38px
+
+#mechDetails1 p
+  margin: 0px 0px 0px 0px
+  padding: 0px 0px 0px 0px
+
+#mechEngineDetails
+  height: 98px
+
+#engineDropDown
+  margin-top: 1px
+  margin-left: 5px
+  font-size: 10px
+  height: 14px
+
+#mechWalk,
+#mechRun,
+#mechJump
+  font-weight: bold
+  margin-top: 6px
+  height: 15px
+
+.movementValues
+  display: inline-block
+  width: 20px
+  height: 10px
+
+.upMovementArrow
+  display: inline-block
+  text-align: center
+  margin-left: 7px
+  cursor: pointer
+
+.downMovementArrow
+  display: inline-block
+  text-align: center
+  margin-left: 3px
+  cursor: pointer
+
+.movementValues
+  display: inline-block
+  width: 20px
+  height: 10px
+
+#mechTonnage
+  height: 50px
+
+.dropDownSelectors
+  margin-top: 1px
+  margin-left: 5px
+  font-size: 10px
+  height: 14px
+
+#heatSinkContainer
+  border: 2px solid black
+  background-color: #3e4146
+  margin-top: 6px
+  display: inline-block
+  width: 151px
+  height: 50px
+
+#heatSinkContainer p
+  margin: 2px 0px 2px 0px
+
+#heatSinkContainer select
+  margin: 2px 0px 2px 0px
+
+#heatSinkTypeDropDown 
+  width: 57px
+  margin: 0px 0px 0px 0px
+
+#internalsCriticals
+    margin-left: 159px
+
+#internalsCriticals h4
+  font-size: 14px
+  font-family: Verdana, Geneva, Arial, sans-serif
+
+#internalsCriticalsContainer
+  background-color: #3e4146
+  border: 2px solid black
+  margin-top: 6px
+  display: inline-block
+  width: 151px
+  height: auto
+
+#internalsTable
+  font-family: Verdana, Geneva, Arial, sans-serif
+  font-size: 10px
+  color: white
+  width: 154px
+
+#internalsTable td
+  border-bottom: 1px solid lightgrey
+  border-collapse: collapse
+  text-align: center
+  box-shadow: 0 0 black, 0 1px black, 1px 0 black, 0 0 black
+
+.submitChanges
+  display: block
+  margin: 0 auto
+  margin-top: 8px
 
 #mechArmorSections
   display: inline-block
@@ -395,21 +548,10 @@ h1
   top: 3px
   width: 30px
   display: inline-block
-  
-#mechDetails_Weight, #mechDetails_Speed, #mechDetails_Name_label
-  width: 69px
-  display: inline-block
-  margin: 10px 0px 10px 0px
-  
-#mechDetails_Name_label
-  width: 130px
 
 #mechSave_Submit_Div
   text-align: center
   margin-top: 15px
-  
-#mechDetails_oid
-  display: none
   
 .inlineLabel
   display: inline-block
