--- a/views/sideBar.pug
+++ b/views/sideBar.pug
@@ -23,4 +23,4 @@ block sideBar
     p.selector(id="weaponSelector") Weapons/Criticals
     div.popoutClass.popoutTab3
 
-    p.selector(id="criticalSelector") Save Mech
+    p.selector(id="mechDetails_save") Save Mech
