--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     title= MechDesign
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/mechArmorDivs.css')
     link(rel='icon', href='/images/btAtlasSkull.png' type='image/x-icon')
     script(src='/javascripts/jquery-2.1.4.min.js')
     script(src='/javascripts/mainFunctions.js')
