Adjust next view for mech armor buildout

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -203,6 +203,14 @@ h1 {
   color: black;
 }
 
+.dividerBar {
+  height: 1px;
+  width: 90%;
+  color: black;
+  background-color: #808080;
+  margin-top: 0px;
+}
+
 .popoutClass {
   display: none;
   position: absolute;
@@ -218,6 +226,7 @@ h1 {
   transition: top 0.5s ease-in-out;
   margin: 0;
   top: -185px;
+  font-family: arial, sans-serif;
 }
 
 .popoutTab {
