--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -193,6 +193,13 @@ h1
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif
   color: black
 
+.dividerBar
+  height: 1px
+  width: 90%
+  color: black
+  background-color:#808080
+  margin-top: 0px
+
 .popoutClass
   display: none
   position: absolute
@@ -208,6 +215,7 @@ h1
   transition: top 0.5s ease-in-out
   margin: 0
   top: -185px // Initially set high so it can come in off page
+  font-family: arial, sans-serif
 
 .popoutTab
   width: 700px
