--- a/views/sideBar.pug
+++ b/views/sideBar.pug
@@ -18,7 +18,8 @@ block sideBar
               th Intro Date
 
     p.selector(id="armorSelector") Armor
-    div.popoutClass.popoutTab2
+    div.popoutClass.popoutTab2 Increase External Armor
+      hr.dividerBar
 
     p.selector(id="weaponSelector") Weapons/Criticals
     div.popoutClass.popoutTab3
