--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -680,4 +680,74 @@ h1 {
   margin-bottom: 8px;
 }
 
+.armorIncChevron {
+  position: relative;
+  display: inline-block;
+  width: 0.6em;
+  height: 0.6em;
+  box-sizing: border-box;
+  border-top: 2px solid darkred;
+  border-left: 2px solid darkred;
+  border-top-left-radius: 2px;
+  transform: rotate(45deg);
+  transform-origin: top left;
+}
+.armorIncChevron::before {
+  content: "";
+  position: absolute;
+  box-sizing: border-box;
+  top: 2px;
+  left: 2px;
+  width: calc(0.6em - 2px - 3px + 1px);
+  height: calc(0.6em - 2px - 3px + 1px);
+  border-top: 2px solid darkred;
+  border-left: 2px solid darkred;
+}
+.armorIncChevron::after {
+  content: "";
+  position: absolute;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: calc(0.6em - 2px + 0.5px);
+  height: calc(0.6em - 2px + 0.5px);
+  border-top: 3px solid orange;
+  border-left: 3px solid orange;
+}
+
+.armorDecChevron {
+  position: relative;
+  display: inline-block;
+  width: 0.6em;
+  height: 0.6em;
+  box-sizing: border-box;
+  border-top: 2px solid darkred;
+  border-left: 2px solid darkred;
+  border-top-left-radius: 2px;
+  transform: rotate(-135deg);
+  transform-origin: top left;
+}
+.armorDecChevron::before {
+  content: "";
+  position: absolute;
+  box-sizing: border-box;
+  top: 2px;
+  left: 2px;
+  width: calc(0.6em - 2px - 3px + 1px);
+  height: calc(0.6em - 2px - 3px + 1px);
+  border-top: 2px solid darkred;
+  border-left: 2px solid darkred;
+}
+.armorDecChevron::after {
+  content: "";
+  position: absolute;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: calc(0.6em - 2px + 0.5px);
+  height: calc(0.6em - 2px + 0.5px);
+  border-top: 3px solid orange;
+  border-left: 3px solid orange;
+}
+
 /*# sourceMappingURL=style.css.map */
