Added armor inc/dec arrows, num inputs, and positioning

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -662,3 +662,133 @@ h1
 
 .armorDecChevron
   +chevron(down, 0.6em, 2px, darkred, 3px, orange, 2px)
+
+.internalStructurePoints
+  color: cadetblue
+  font-size: 16px
+  position: absolute
+  text-align: center
+  min-width: 25px
+
+#torsoLeftInt
+  margin-top: 92px
+  margin-left: 98px
+
+#torsoRightInt
+  margin-top: 92px
+  margin-left: 172px
+
+#legRightInt
+  margin-top: 285px
+  margin-left: 58px
+
+#legLeftInt
+  margin-top: 284px
+  margin-left: -90px
+
+#centerArmorInt
+  margin-top: 127px
+  margin-left: -61px
+
+#headArmorInt
+  margin-top: 86px
+  margin-left: -91px
+
+#armLeftInt
+  margin-top: 93px
+  margin-left: -225px
+
+#armRightInt
+  margin-top: 93px
+  margin-left: -45px
+
+.armorDecChevron
+  position: relative
+
+#LeftTorsoInc
+  top: 116px
+  left: 122px
+
+#LeftTorsoDec
+  top: 146px
+  left: 107px
+
+#RightTorsoInc
+  top: 116px
+  left: 174px
+
+#RightTorsoDec
+  top: 146px
+  left: 159px
+
+#LeftRearTorsoInc
+  top: 440px
+  left: 20px
+
+#LeftRearTorsoDec
+  top: 470px
+  left: 5px
+
+#RightRearTorsoInc
+  top: 440px
+  left: 155px
+
+#RightRearTorsoDec
+  top: 470px
+  left: 140px
+
+#centerRearTorsoInc
+  top: 430px
+  left: 43px
+
+#centerRearTorsoDec
+  top: 460px
+  left: 28px
+
+#RightLegInc
+  top: 320px
+  left: 83px
+
+#RightLegDec
+  top: 350px
+  left: 68px
+
+#LeftLegInc
+  top: 320px
+  left: -88px
+
+#LeftLegDec
+  top: 350px
+  left: -103px
+
+#centerTorsoInc
+  top: 175px
+  left: -47px
+
+#centerTorsoDec
+  top: 205px
+  left: -62px
+
+#headInc
+  top: 33px
+  left: -78px
+
+#headDec
+  top: 63px
+  left: -93px
+
+#LeftArmInc
+  top: 116px
+  left: -212px
+
+#LeftArmDec
+  top: 146px
+  left: -227px
+
+#RightArmInc
+  top: 116px
+  left: -31px
+
+#RightArmDec
+  top: 146px
+  left: -46px
