--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -611,6 +611,7 @@ h1
   width: $size
   height: $size
   box-sizing: border-box
+  cursor: pointer
 
   // Draw top + left edges for the outer color
   border-top: $outer-thickness solid $outer-color
@@ -669,6 +670,7 @@ h1
   position: absolute
   text-align: center
   min-width: 25px
+  user-select: none
 
 #torsoLeftInt
   margin-top: 92px
