Updated tonnage calculations and added movement controls

--- a/views/design.pug
+++ b/views/design.pug
@@ -33,7 +33,7 @@ block mainContent
             p
               strong#indMechTechBase Tech Base: #{fullMechData.mechs_techBase || 'Clan'}
             p
-              strong#indMechProdYear Production Year: #{fullMechData.mechs_introDate || '3030'}
+              strong#indMechProdYear Production Year: #{fullMechData.mechs_productionYear || '3030'}
 
           h4 Engine Details
           .detailsTextDisplay#mechEngineDetails
