--- a/views/sideBar.pug
+++ b/views/sideBar.pug
@@ -69,5 +69,6 @@ block sideBar
 
     p.selector(id="weaponSelector") Weapons/Criticals
     div.popoutClass.popoutTab3
+      include weapons.pug
 
     p.selector(id="mechDetails_save") Save Mech
