--- a/views/weapons.pug
+++ b/views/weapons.pug
@@ -1,5 +1,15 @@
 | Weapons / Criticals
 hr.dividerBar
+div#weaponAccordion
+  ul.weaponAccordionTabs
+  li.weaponAccordionLI Energy
+    ul#weaponChild.wc_Energy
+  li.weaponAccordionLI Ballistics
+    ul#weaponChild.wc_Ballistics
+  li.weaponAccordionLI Missiles
+    ul#weaponChild.wc_Missiles
+  li.weaponAccordionLI Ammunition
+    ul#weaponChild.wc_Ammunition
 table#weaponInfo
   tbody
     tr#weaponDetailsHeader
