Build out weapons. Adding event listeners next

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/mechArmorDivs.css')
     link(rel='icon', href='/images/btAtlasSkull.png' type='image/x-icon')
     script(src='/javascripts/jquery-2.1.4.min.js')
+    script(src='/javascripts/jquery-ui-1.11.2.js')
     script(src='/javascripts/mechConstants.js')
     script(src='/javascripts/mainFunctions.js')
   body
