--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -846,3 +846,17 @@ h1
 .weaponChildLI
   color: white
   list-style-type: none
+
+.highlighted
+  cursor: pointer
+  color: #5D5D50
+
+.highlighted2
+  background-color: #F9EDBE
+  box-shadow: 6px 6px 5px black
+  outline-color: blue
+  cursor: pointer
+
+.weaponHighlight
+  background: #003545
+  border-left: 5px solid lightgreen
