Fix color contrast issue with on-hover link tabs

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -981,7 +981,7 @@ h1 {
 }
 
 .highlighted2 {
-  background-color: #F9EDBE;
+  background-color: cadetblue;
   box-shadow: 6px 6px 5px black;
   outline-color: blue;
   cursor: pointer;
